Fix postion of text on breol news covers - IE
breol-146

--- a/sites/all/themes/wille/sass/component/_dialog.scss
+++ b/sites/all/themes/wille/sass/component/_dialog.scss
@@ -12,8 +12,8 @@
   // element has position: absolute.
   // position: absolute;
   border-radius: 0;
-  left: 0 !important;
-  right: 0 !important;
+  // left: auto !important;
+  // right: auto !important;
   margin: 0 auto;
   top: 100px !important;
   position: absolute !important;
